--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
         <title>로그인</title>
     </head>
     <body>
-    <h1>로그인</h1>
+    <h1>로그인1234</h1>
     <a href="http://localhost:8080/oauth2/authorization/github">GitHub으로 로그인</a>
     </body>
 </html>
